--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -8,11 +8,21 @@
         p{
             color: red;
         }
+
+        #para1 {
+            color: blue;
+        }
+        .colortext {
+            color: chartreuse;
+        }
     </style>
 </head>
 <body>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
+    <p id="para1">This is a paragraph.</p>
+    <p class="colortext">This is another paragraph.</p>
+    <p class="colortext">This is also a paragraph.</p>
 </body>
 </html>
