--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        p{
+        h1, p{
             color: red;
         }
 
@@ -19,6 +20,7 @@
 </head>
 <body>
     <h1>This is a Heading</h1>
+    <h2 style="color: chartreuse;">Aku nas</h2>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p id="para1">This is a paragraph.</p>
