add internal, inline, eksternal CSS

--- a/lesson/index.html
+++ b/lesson/index.html
@@ -22,9 +22,10 @@
     <h1>This is a Heading</h1>
     <h2 style="color: chartreuse;">Aku nas</h2>
     <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
+    <p>This is another paragraph.</p> 
     <p id="para1">This is a paragraph.</p>
     <p class="colortext">This is another paragraph.</p>
     <p class="colortext">This is also a paragraph.</p>
+    <p>Makan Nasi</p>
 </body>
 </html>
