--- a/lesson/index.html
+++ b/lesson/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            background-image: url("https://tinyjpg.com/images/social/website.jpg");
+            background-repeat: repeat-y;
+        }
         h1, p{
             color: red;
         }
